--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meu-projeto",
+  "name": "Revezamento turma B",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "moment-timezone": "^0.6.0",
     "sqlite3": "^5.1.7"
   }
 }
